# udacity-clean-code

./: .env  .pylintrc  README.md  churn_library.py  churn_script_logging_and_tests.py  main.py  pyproject.toml
models/: logistic_model.pkl
src/: churn_library.py  param_config.yaml
